Yaml/On-Premise/vir_service_nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: vir-index-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 10.96.0.100
  selector:
    app: nginx
    name: index
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30200
---
apiVersion: v1
kind: Service
metadata:
  name: vir-login-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 10.96.0.101
  selector:
    app: nginx
    name: login
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30201
---
apiVersion: v1
kind: Service
metadata:
  name: vir-signup-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 10.96.0.102
  selector:
    app: nginx
    name: signup
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30202
---
apiVersion: v1
kind: Service
metadata:
  name: vir-menu-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 10.96.0.103
  selector:
    app: nginx
    name: menu
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30203
---
apiVersion: v1
kind: Service
metadata:
  name: vir-mypage-service
  namespace: nginx
spec:
  type: NodePort
  clusterIP: 10.96.0.104
  selector:
    app: nginx
    name: mypage
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 30204
