Yaml/On-Premise/vir_service_tomcat.yaml
apiVersion: v1
kind: Service
metadata:
  name: vir-tomcat-index-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 10.96.0.200
  selector:
    app: tomcat
    name: index
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vir-tomcat-login-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 10.96.0.201
  selector:
    app: tomcat
    name: login
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vir-tomcat-signup-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 10.96.0.202
  selector:
    app: tomcat
    name: signup
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vir-tomcat-menu-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 10.96.0.203
  selector:
    app: tomcat
    name: menu
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: vir-tomcat-mypage-service
  namespace: tomcat
spec:
  type: ClusterIP
  clusterIP: 10.96.0.204
  selector:
    app: tomcat
    name: mypage
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
